@@ -11,7 +11,7 @@ from PyQt5 import QtCore, QtGui, QtWidgets
 
 
 class Ui_forecast1hWindow(object):
-    def setupUi(self, forecast1hWindow, gui_path=''):
+    def setupUi(self, forecast1hWindow):
         forecast1hWindow.setObjectName("forecast1hWindow")
         forecast1hWindow.resize(480, 380)
         forecast1hWindow.setMinimumSize(QtCore.QSize(0, 0))
@@ -109,8 +109,7 @@ class Ui_forecast1hWindow(object):
 "}")
         self.weather_lb.setText("")
         icon = QtGui.QIcon()
-        icon.addPixmap(QtGui.QPixmap(gui_path + "graphic_materials/pictogrammes/averses_orageuses.svg"),
-                       QtGui.QIcon.Normal, QtGui.QIcon.Off)
+        icon.addPixmap(QtGui.QPixmap("graphic_materials/pictogrammes/averses_orageuses.svg"), QtGui.QIcon.Normal, QtGui.QIcon.Off)
         self.weather_lb.setIcon(icon)
         self.weather_lb.setIconSize(QtCore.QSize(80, 80))
         self.weather_lb.setObjectName("weather_lb")
@@ -139,7 +138,7 @@ class Ui_forecast1hWindow(object):
 "}")
         self.ok_button.setText("")
         icon1 = QtGui.QIcon()
-        icon1.addPixmap(QtGui.QPixmap(gui_path + "icons/exit_icon.svg"), QtGui.QIcon.Normal, QtGui.QIcon.Off)
+        icon1.addPixmap(QtGui.QPixmap("icons/exit_icon.svg"), QtGui.QIcon.Normal, QtGui.QIcon.Off)
         self.ok_button.setIcon(icon1)
         self.ok_button.setIconSize(QtCore.QSize(50, 50))
         self.ok_button.setObjectName("ok_button")
